apllied patch from Christian Neumair <chris@gnome-de.org> to translate bse
Sat Oct 11 21:56:33 2003  Tim Janik  <timj@gtk.org>

        * apllied patch from Christian Neumair <chris@gnome-de.org>
        to translate bse and beast.
        made lots of modifications on top of the patch to get bse
        translations to work, integrate things more smoothly with beast
        and started sample translation de.

        * po-bse/: new directory holding bse translations.

        * po-bse/de.po:
        * po/de.po: german message catalogs.

        * po/update.sh:
        * po-bse/update.sh: helper scripts to update language specifc
        message catalogs (e.g. update.sh de).

        * po-bse/Makefile.in.in: makefile copy to hardcode GETTEXT_PACKAGE=bse.

        * Makefile.am: provide BST_PATH_LOCALE in make-paths.h.

        * configure.in: moved i18n stuff into its own fucntion.
        replicated AM_GLIB_DEFINE_LOCALEDIR() which doesn't AC_SUBST() its
        result.
        christian's patch adds AC_CONFIG_COMMANDS() to generate po-bse/Makefile.

        * beast-gtk/bstdefs.h:
        * bse/bsedefs.h: provide _() and N_().

        * beast-gtk/bstmain.c: bind "beast" textdomain to BST_PATH_LOCALE and
        handle additional path argument.

svn path=/trunk/; revision=1353

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,7 @@
 ## Makefile.am for BEAST/BSE
 
 # subdirs with source code to be compiled
-SRC_SUBDIRS = sfi bse plugins bsw shell beast-gtk po
+SRC_SUBDIRS = sfi bse plugins bsw shell beast-gtk po po-bse
 
 # other subdirs
 SUBDIRS = . $(SRC_SUBDIRS) docs test
@@ -31,6 +31,7 @@ make-paths.h: $(top_builddir)/config.status Makefile
 	&& echo "#define BST_PATH_DOCS         \"${beastdocsdir}\"" >> xgen-pph \
 	&& echo "#define BST_PATH_IMAGES       \"${beastimagesdir}\"" >> xgen-pph \
 	&& echo "#define BST_PATH_DATA_SAMPLES \"${beastsampledatadir}\"" >> xgen-pph \
+	&& echo "#define BST_PATH_LOCALE       \"${beastlocaledir}\"" >> xgen-pph \
 	&& echo >> xgen-pph \
 	&& echo "/* Generated data ends here */" >> xgen-pph \
 	&& (cp xgen-pph $@) \
