--- a/configure.in
+++ b/configure.in
@@ -79,17 +79,6 @@ AC_PROG_MAKE_SET
 # Make sure else configure stuff exists.
 AC_CANONICAL_HOST
 
-# Initialize i18n
-ALL_LINGUAS=""
-AC_SUBST(ALL_LINGUAS)
-GETTEXT_PACKAGE=beast
-AC_SUBST(GETTEXT_PACKAGE)
-AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE",
-	[The package name, for gettext])
-AM_GLIB_DEFINE_LOCALEDIR(BEAST_LOCALEDIR)
-AM_GLIB_GNU_GETTEXT
-AC_PROG_INTLTOOL
-
 # declare --enable-* args and collect ac_help strings
 AC_ARG_ENABLE(debug,       [  --enable-debug=[no/minimum/yes] turn on debugging [default=$debug_default]],,enable_debug=$debug_default)
 AC_ARG_ENABLE(devel-rules, [  --enable-devel-rules=[no/yes]   turn on developer build rules],,)
@@ -117,6 +106,33 @@ MC_IF_VAR_EQ(enable_shared, no, , enable_shared=yes)
 dnl
 dnl Define package requirements.
 dnl
+AC_DEFUN(AC_I18N_REQUIREMENTS,
+[
+    ALL_LINGUAS="de"
+    AC_SUBST(ALL_LINGUAS)
+    dnl gettext domain for po/
+    GETTEXT_PACKAGE=beast
+    AC_SUBST(GETTEXT_PACKAGE)
+    
+    dnl locale directory for all domains
+    dnl (AM_GLIB_DEFINE_LOCALEDIR() could do this if it would do AC_SUBST())
+    saved_prefix="$prefix"
+    saved_exec_prefix="$exec_prefix"
+    test "x$prefix" = xNONE && prefix=$ac_default_prefix
+    test "x$exec_prefix" = xNONE && exec_prefix=$prefix
+    if test "x$CATOBJEXT" = "x.mo" ; then
+      beastlocaledir=`eval echo "${libdir}/locale"`
+    else
+      beastlocaledir=`eval echo "${datadir}/locale"`
+    fi
+    exec_prefix="$saved_exec_prefix"
+    prefix="$saved_prefix"
+    AC_SUBST(beastlocaledir)
+
+    dnl do gettext checks and provide INTLLIBS
+    AM_GLIB_GNU_GETTEXT
+    AC_PROG_INTLTOOL
+])
 AC_DEFUN(AC_SFI_REQUIREMENTS,
 [
     dnl We need GLib with friends
@@ -501,6 +517,7 @@ AM_CONDITIONAL(IF_DVLBUILD, test -z "$DVLBUILD")
 AM_CONDITIONAL(IF_NOTDVLBUILD, test -z "$NOTDVLBUILD")
 
 # Check requirement sets
+AC_I18N_REQUIREMENTS
 AC_SFI_REQUIREMENTS
 AC_BSE_REQUIREMENTS
 AC_BSE_SHELL_REQUIREMENTS
@@ -538,9 +555,13 @@ beast-gtk/images/Makefile
 docs/Makefile
 docs/generated/Makefile
 po/Makefile.in
+po-bse/Makefile.in
 test/Makefile
 bse/bseconfig.h
 sfi.pc
 bse.pc
 ])
+
+AC_CONFIG_COMMANDS([sed-po-makefiles], [sed -e "/POTFILES =/r po-bse/POTFILES" po-bse/Makefile.in > po-bse/Makefile])
+
 AC_OUTPUT
