use BSE_GETTEXT_DOMAIN instead of unversioned "bse" and bind gettext
Sun Oct 12 14:17:19 2003  Tim Janik  <timj@gtk.org>

        * bsedefs.h:
        * bsemain.c: use BSE_GETTEXT_DOMAIN instead of unversioned "bse" and
        bind gettext charset to UTF-8.

        * bseconfig.h.in: provide BSE_GETTEXT_DOMAIN.

        * bsedefs.h: include bseconfig.h globally.

svn path=/trunk/; revision=1358

--- a/bse/bseconfig.h.in
+++ b/bse/bseconfig.h.in
@@ -34,6 +34,7 @@ extern "C" {
 #define BSE_BINARY_AGE                                  (@BSE_BINARY_AGE@)
 #define BSE_INTERFACE_AGE                               (@BSE_INTERFACE_AGE@)
 #define BSE_VERSION					("@BSE_VERSION@")
+#define	BSE_GETTEXT_DOMAIN				("@BSE_GETTEXT_DOMAIN@")
 
 /* check for header versions
  */
