i18n-markup menu entries. create the item factory via
Sun Oct 12 15:49:22 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstapp.c: i18n-markup menu entries. create the item
        factory via bst_item_factory_new().

        * beast-gtk/bstmain.c: use versioned i18n domain, and bind gettext
        charset to UTF-8.

        * beast-gtk/bstutils.[hc]: for a start, implemented simple version of a
        translating item factory. this isn't good enough though, the translating
        text domain and whether translation is required, needs to be transported
        with the menu entries.

svn path=/trunk/; revision=1359

--- a/configure.in
+++ b/configure.in
@@ -34,7 +34,7 @@ BST_RELEASE_CANDIDATE=rc2
 
 # version number setup
 BSE_VERSION=$BSE_MAJOR_VERSION.$BSE_MINOR_VERSION.$BSE_MICRO_VERSION
-BST_VERSION=$BSE_VERSION
+BST_VERSION=$BSE_VERSION # -rcZ to be appended...
 if test -n "$BST_RELEASE_CANDIDATE" ; then
     BST_VERSION=$BST_VERSION-$BST_RELEASE_CANDIDATE
 fi
@@ -108,12 +108,19 @@ dnl Define package requirements.
 dnl
 AC_DEFUN(AC_I18N_REQUIREMENTS,
 [
+    dnl supported translations:
     ALL_LINGUAS="de"
     AC_SUBST(ALL_LINGUAS)
-    dnl gettext domain for po/
-    GETTEXT_PACKAGE=beast
+
+    dnl versioned BSE gettext domain (po-bse/)
+    BSE_GETTEXT_DOMAIN=bse-v$BSE_VERSION
+    AC_SUBST(BSE_GETTEXT_DOMAIN)
+    dnl versioned BEAST gettext domain (po/)
+    BST_GETTEXT_DOMAIN=beast-v$BSE_VERSION    # version without -rcZ
+    AC_DEFINE_UNQUOTED(BST_GETTEXT_DOMAIN, "$BST_GETTEXT_DOMAIN", [Versioned BEAST gettext domain])
+    GETTEXT_PACKAGE=$BST_GETTEXT_DOMAIN
     AC_SUBST(GETTEXT_PACKAGE)
-    
+
     dnl locale directory for all domains
     dnl (AM_GLIB_DEFINE_LOCALEDIR() could do this if it would do AC_SUBST())
     saved_prefix="$prefix"
@@ -354,7 +361,7 @@ AC_DEFUN(AC_BEAST_REQUIREMENTS,
     # BEAST resource paths
     beastbasedir=\${datadir}/beast
     beastdocsdir=$beastbasedir/v$BSE_MAJOR_VERSION.$BSE_MINOR_VERSION.$BSE_MICRO_VERSION/docs
-    beastimagesdir=$beastbasedir/v$BSE_MAJOR_VERSION.$BSE_MINOR_VERSION/images
+    beastimagesdir=$beastbasedir/v$BSE_MAJOR_VERSION.$BSE_MINOR_VERSION.$BSE_MICRO_VERSION/images
     # beast-data package path
     beastdatadir=$beastbasedir/data-v$BSE_MAJOR_VERSION.$BSE_MINOR_VERSION
     beastsampledatadir=$beastdatadir/samples
