--- a/po-bse/Makefile.in.in
+++ b/po-bse/Makefile.in.in
@@ -12,7 +12,7 @@
 # - Modified by jacob berkman <jacob@ximian.com> to install
 #   Makefile.in.in and po2tbl.sed.in for use with glib-gettextize
 
-GETTEXT_PACKAGE = bse
+GETTEXT_PACKAGE = @BSE_GETTEXT_DOMAIN@
 PACKAGE = @PACKAGE@
 VERSION = @VERSION@
 
