fix BST_ARCH_NAME with newer autoconf.
Sun Oct 12 16:37:29 2003  Tim Janik  <timj@gtk.org>

        * configure.in: fix BST_ARCH_NAME with newer autoconf.

        * Makefile.am:
        * configure.in: major install/search paths cleanup.
        provide standard search paths for effects and instruments,
        and account for beast/bse data sitting in a users home.

        * beast-gtk/bstmain.c: use BSE procedures to retrieve
        search/install path locations.
        renamed --print-path to --print-dir, as this options prints
        out single directories only. adapted the set of paths
        printed here.

        * docs/beast.1.texi: reflect --print-dir.

        * beast-gtk/bstparam-entry.c (param_entry_change_value): use
        G_SEARCHPATH_SEPARATOR_S to split/join paths and horizontally
        expand entries with path names.

        * beast-gtk/bsttreestores.c: adapt to path/file-crawler changes.

svn path=/trunk/; revision=1362

--- a/Makefile.am
+++ b/Makefile.am
@@ -23,15 +23,18 @@ make-paths.h: $(top_builddir)/config.status Makefile
 	cd $(top_builddir) \
 	&& echo "/* Generated data from $< (by make $@) */" > xgen-pph \
 	&& echo >> xgen-pph \
-	&& echo "#define SFIDL_PATH_STDINC     \"${sfidlstdincdir}\"" >> xgen-pph \
-	&& echo "#define BSE_PATH_PLUGINS      \"${bseplugindir}\"" >> xgen-pph \
-	&& echo "#define BSE_PATH_LADSPA       \"${bseladspadir}\"" >> xgen-pph \
-	&& echo "#define BSE_PATH_SCRIPTS      \"${bsescriptdir}\"" >> xgen-pph \
-	&& echo "#define BSE_PATH_BINARIES     \"${bindir}\"" >> xgen-pph \
-	&& echo "#define BST_PATH_DOCS         \"${beastdocsdir}\"" >> xgen-pph \
-	&& echo "#define BST_PATH_IMAGES       \"${beastimagesdir}\"" >> xgen-pph \
-	&& echo "#define BST_PATH_DATA_SAMPLES \"${beastsampledatadir}\"" >> xgen-pph \
-	&& echo "#define BST_PATH_LOCALE       \"${beastlocaledir}\"" >> xgen-pph \
+	&& echo "#define SFIDL_PATH_STDINC        \"${sfidlstdincdir}\"" >> xgen-pph \
+	&& echo "#define BSE_PATH_BINARIES        \"${bindir}\"" >> xgen-pph \
+	&& echo "#define BSE_PATH_LADSPA          \"${bseladspapath}\"" >> xgen-pph \
+	&& echo "#define BSE_PATH_PLUGINS         \"${bseplugindir}\"" >> xgen-pph \
+	&& echo "#define BSE_PATH_SAMPLES         \"${bsesampledir}\"" >> xgen-pph \
+	&& echo "#define BSE_PATH_EFFECTS         \"${bseeffectdir}\"" >> xgen-pph \
+	&& echo "#define BSE_PATH_INSTRUMENTS     \"${bseinstrumentdir}\"" >> xgen-pph \
+	&& echo "#define BSE_PATH_SCRIPTS         \"${bsescriptdir}\"" >> xgen-pph \
+	&& echo "#define BSE_PATH_USER_DATA(dir)  \"${bseuserdatadir}\" dir" >> xgen-pph \
+	&& echo "#define BST_PATH_DOCS            \"${beastdocsdir}\"" >> xgen-pph \
+	&& echo "#define BST_PATH_IMAGES          \"${beastimagesdir}\"" >> xgen-pph \
+	&& echo "#define BST_PATH_LOCALE          \"${beastlocaledir}\"" >> xgen-pph \
 	&& echo >> xgen-pph \
 	&& echo "/* Generated data ends here */" >> xgen-pph \
 	&& (cp xgen-pph $@) \
