return BstCatalogTool by value, so we can perform gettext() translations
Mon Oct 13 12:18:11 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstcatalog.[hc]: return BstCatalogTool by value, so we
        can perform gettext() translations beforehand.

        * beast-gtk/bstmessages.c: renamed message catalog. added i18n
        markup.

svn path=/trunk/; revision=1365

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -77,7 +77,7 @@ beast_extra_sources = $(strip \
 	bstrackeditor-covers.c	bstmarshal.c \
 )
 beast_extra_files = $(strip \
-	catalog-en.c		bstmarshal.list		stamp-bstenum_arrays.c \
+	bstmessages.c		bstmarshal.list		stamp-bstenum_arrays.c \
 	bstdebugkeys.defs	bstrecords.idl		stamp-ckeycheck \
 )
 # BEAST built sources that don't get installed
@@ -148,7 +148,7 @@ $(srcdir)/bstmarshal.c: bstmarshal.list
 SCANKEYS=$(TEXITHEQUE) scankeys --
 stamp-ckeycheck: @DVLBUILD@ $(beast_sources) $(beast_extra_sources)
 	cd $(srcdir) \
-	&& $(SCANKEYS) --count --key CKEY --skipkeys catalog-en.c \
+	&& $(SCANKEYS) --count --key CKEY --skipkeys bstmessages.c \
 	     --tmplstart '#error MISSING DOC KEYS:\n' \
 	     --tmplkey '  { CKEY (%s),\t\t"Name",\n  BST_STOCK_,\t\t\t\t"",\n    "tip", NULL,\n  },\n' \
 	     --needkeys $(beast_sources) $(beast_extra_sources)
