--- a/bse/icons/Makefile.icons
+++ b/bse/icons/Makefile.icons
@@ -1,4 +1,21 @@
 ## Generated data (by make Makefile.icons)
+icon_list += ampctrl.png
+icon_list += ampctrl.xcf
+icon_list += ball.xcf
+icon_list += const.xcf
+icon_list += disconnect.xcf
+icon_list += instrument.xcf
+icon_list += keyboard.xcf
+icon_list += mic.xcf
+icon_list += midi.xcf
+icon_list += osc.xcf
+icon_list += sheet.xcf
+icon_list += snet.xcf
+icon_list += snooper.xcf
+icon_list += song.xcf
+icon_list += speaker.xcf
+icon_list += virtual.xcf
+icon_list += waveosc.xcf
 icon_list += ball.c
 icon_list += biquad.c
 icon_list += const.c
@@ -19,20 +36,4 @@ icon_list += song.c
 icon_list += speaker.c
 icon_list += subsynth.c
 icon_list += waveosc.c
-icon_list += ampctrl.xcf
-icon_list += ball.xcf
-icon_list += const.xcf
-icon_list += disconnect.xcf
-icon_list += instrument.xcf
-icon_list += keyboard.xcf
-icon_list += mic.xcf
-icon_list += midi.xcf
-icon_list += osc.xcf
-icon_list += sheet.xcf
-icon_list += snet.xcf
-icon_list += snooper.xcf
-icon_list += song.xcf
-icon_list += speaker.xcf
-icon_list += virtual.xcf
-icon_list += waveosc.xcf
 ## Generated data ends here
