figure versioned gettext domain (GETTEXT_PACKAGE) from ../po-helper.sh.
Wed Oct 15 02:35:15 2003  Tim Janik  <timj@gtk.org>

        * update.sh: figure versioned gettext domain (GETTEXT_PACKAGE)
        from ../po-helper.sh.

        * POTFILES.in: added more i18n makred up files.

svn path=/trunk/; revision=1374

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,4 +1,28 @@
-beast-gtk/bstmain.c
 beast-gtk/bstapp.c
-beast-gtk/bstwavereposhell.c
+beast-gtk/bstcanvaslink.c
+beast-gtk/bstcanvassource.c
+beast-gtk/bsteventrollctrl.c
+beast-gtk/bstfiledialog.c
+beast-gtk/bstinstrumentview.c
+beast-gtk/bstmain.c
 beast-gtk/bstmessages.c
+beast-gtk/bstparam-entry.c
+beast-gtk/bstpartdialog.c
+beast-gtk/bstpartview.c
+beast-gtk/bstpianorollctrl.c
+beast-gtk/bstplayback.c
+beast-gtk/bstprocedure.c
+beast-gtk/bstprojectctrl.c
+beast-gtk/bstrackeditor.c
+beast-gtk/bstrackitem.c
+beast-gtk/bstradiotools.c
+beast-gtk/bstsampleeditor.c
+beast-gtk/bstsnetrouter.c
+beast-gtk/bstsnetshell.c
+beast-gtk/bstsongshell.c
+beast-gtk/bststest.c
+beast-gtk/bsttrackrollctrl.c
+beast-gtk/bsttrackview.c
+beast-gtk/bstusermessage.c
+beast-gtk/bstwaveeditor.c
+beast-gtk/bstwavereposhell.c
