Added "sv" to ALL_LINGUAS. Added Swedish translation.
2003-10-15  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "sv" to ALL_LINGUAS.
	* po/sv.po: Added Swedish translation.

svn path=/trunk/; revision=1378

--- a/configure.in
+++ b/configure.in
@@ -110,7 +110,7 @@ dnl
 AC_DEFUN(AC_I18N_REQUIREMENTS,
 [
     dnl supported translations:
-    ALL_LINGUAS="de"
+    ALL_LINGUAS="de sv"
     AC_SUBST(ALL_LINGUAS)
 
     dnl versioned BSE gettext domain (po-bse/)
