Added missing files and comment. Added. Updated Swedish translation.
2003-10-16  Christian Rose  <menthos@menthos.com>

	* POTFILES.in: Added missing files and comment.
	* POTFILES.skip: Added.
	* sv.po: Updated Swedish translation.

svn path=/trunk/; revision=1384

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,3 +1,5 @@
+# List of source files containing translatable strings.
+# Please keep this file sorted alphabetically
 beast-gtk/bstapp.c
 beast-gtk/bstcanvaslink.c
 beast-gtk/bstcanvassource.c
@@ -26,3 +28,5 @@ beast-gtk/bsttrackview.c
 beast-gtk/bstusermessage.c
 beast-gtk/bstwaveeditor.c
 beast-gtk/bstwavereposhell.c
+beast-gtk/gxk/gxklistwrapper.c
+plugins/bseiirfilter.c
