added simplistic test instrument with MIDI input.
Fri Oct 17 21:07:55 2003  Tim Janik  <timj@gtk.org>

        * library/instruments/test-string.bse: added simplistic test instrument
        with MIDI input.

        * configure.in: generate Makefiles for library/*, define bsedemodir.

        * library/demo/:
        * library/effects/:
        * library/instruments/:
        * library/scripts/: new directories to contain stock data
        to be installed.

svn path=/trunk/; revision=1392

--- a/configure.in
+++ b/configure.in
@@ -276,6 +276,8 @@ AC_DEFUN(AC_BSE_REQUIREMENTS,
     AC_SUBST(bseinstrumentdir)
     bsescriptdir=$bsedatadir/scripts
     AC_SUBST(bsescriptdir)
+    bsedemodir=$bsedatadir/demo
+    AC_SUBST(bsedemodir)
     bseuserdatadir='~/beast'
     AC_SUBST(bseuserdatadir)
 ])
@@ -562,8 +564,13 @@ beast-gtk/icons/Makefile
 beast-gtk/images/Makefile
 docs/Makefile
 docs/generated/Makefile
-test/Makefile
 bse/bseconfig.h
+library/Makefile
+library/effects/Makefile
+library/instruments/Makefile
+library/scripts/Makefile
+library/demo/Makefile
+test/Makefile
 po/Makefile.in
 po-bse/Makefile.in
 po-helper.sh
