remove dold script references, install boot script
svn path=/trunk/; revision=1395

--- a/shell/Makefile.am
+++ b/shell/Makefile.am
@@ -31,11 +31,7 @@ EXTRA_DIST += bsescminterp.h
 #
 # scripts
 #
-scriptdir = $(bsescriptdir)
-script_DATA = $(public_scripts)
-public_scripts = $(strip	\
-	bse-scm-glue.boot	\
-	progressor-example.scm	\
-	modules2grid.scm	\
-)
-EXTRA_DIST += $(public_scripts) test.scm
+shellscriptdir = $(bsescriptdir)
+shellscript_DATA = bse-scm-glue.boot
+
+EXTRA_DIST += $(shellscript_DATA)
