--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -73,6 +73,7 @@ CLEANFILES += $(plugins_built_sources) xgen-enums-*
 plugin_idl_files = $(strip	\
 	davchorus.idl		\
 	bsebalance.idl		\
+	artscompressor.idl	\
 )
 # setup generation of C++ plugins from idl files
 BSEPGEN = ../sfi/bse-plugin-generator
