--- a/plugins/Makefile.plugins
+++ b/plugins/Makefile.plugins
@@ -131,4 +131,14 @@ $(srcdir)/bsebalance.cc: bsebalance.gen-idl.h
 plugins_built_sources += bsebalance.gen-idl.h
 plugin_LTLIBRARIES    += bsebalance.la
 
+##
+## Plugin artscompressor
+##
+artscompressor_la_SOURCES = artscompressor.cc
+artscompressor_la_LDFLAGS = -module -avoid-version
+artscompressor_la_LIBADD  = $(plugin_libs)
+$(srcdir)/artscompressor.cc: artscompressor.gen-idl.h
+plugins_built_sources += artscompressor.gen-idl.h
+plugin_LTLIBRARIES    += artscompressor.la
+
 ## Generated data ends here
