new stock menu icon.
Sat Oct 25 17:34:31 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/cons/binote.png: new stock menu icon.

        * beast-gtk/bstapp.c: list and load demo songs.

svn path=/trunk/; revision=1450

--- a/beast-gtk/icons/Makefile.am
+++ b/beast-gtk/icons/Makefile.am
@@ -36,6 +36,7 @@ SRC_IMAGES = @STRIP_BEGIN@	\
 @STRIP_END@
 
 STOCK_IMAGE_DEFS = @STRIP_BEGIN@ \
+	STOCK_NOTE_ICON			$(srcdir)/binote.png		\
 	STOCK_EDIT_TOOL			$(srcdir)/editor.png		\
 	STOCK_EVENT_CONTROL		$(srcdir)/event-control.png	\
 	STOCK_INFO			$(srcdir)/bulb.png		\
