moved config-paths.h to data/.
Mon Oct 27 00:25:00 2003  Tim Janik  <timj@gtk.org>

        * moved config-paths.h to data/.

        * data/: added rules to install .desktop, .applications, .mime
        and .keys files as well as corresponding images.

svn path=/trunk/; revision=1465

--- a/data/.cvsignore
+++ b/data/.cvsignore
@@ -1,5 +1,9 @@
 Makefile
 Makefile.in
-beast-images.h
 sfi.pc
 bse.pc
+beast-images.h
+config-paths.h
+beast.desktop
+bse.keys
+beast-audio-x-bse.png
