--- a/data/bse.pc.in
+++ b/data/bse.pc.in
@@ -6,7 +6,7 @@ includedir=@includedir@
 # sfidl=@exec_prefix@/sfidl
 
 Name: BSE
-Description: Bedevilled Sound Engine (Plugin Interface)
+Description: Bedevilled Sound Engine (Synthesis Core)
 Requires: sfi @BSE_PC_REQUIRE@ gmodule-2.0
 Version: @VERSION@
 Libs: -L${libdir} -lbse @BSE_PC_LIBS@
