--- a/po-bse/POTFILES.in
+++ b/po-bse/POTFILES.in
@@ -1,1 +1,4 @@
+# List of source files containing translatable strings.
+# Please keep this file sorted alphabetically
 bse/bsebiquadfilter.c
+bse/bsesuper.c
