disable non-working script entries.
Mon Oct 27 20:59:24 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstpartdialog.c (popup_entries): disable non-working script entries.

        * configure.in (ALL_LINGUAS): added russian translation.
        added note for translators about needing po files in po/ and po-bse/,
        suggested by Hasbullah Bin Pit.

svn path=/trunk/; revision=1480

--- a/configure.in
+++ b/configure.in
@@ -109,8 +109,11 @@ dnl Define package requirements.
 dnl
 AC_DEFUN(AC_I18N_REQUIREMENTS,
 [
-    dnl supported translations:
-    ALL_LINGUAS="az de nl sr sr@Latn sv"
+    dnl TRANSLATORS: <LANG>.po files are required in both the po/ _and_ po-bse/
+    dnl directories before <LANG> may be added to ALL_LINGUAS.
+    ALL_LINGUAS="az de nl sr sr@Latn sv ru"
+    dnl TRANSLATORS: <LANG>.po files are required in both the po/ _and_ po-bse/
+    dnl directories before <LANG> may be added to ALL_LINGUAS.
     AC_SUBST(ALL_LINGUAS)
 
     dnl versioned BSE gettext domain (po-bse/)
