--- a/beast-gtk/gxk/Makefile.am
+++ b/beast-gtk/gxk/Makefile.am
@@ -19,12 +19,14 @@ gxk_headers = $(strip \
 	gxkled.h	gxkcanvas.h	gxkdialog.h	gxkglobals.h	\
 	gxkstatusbar.h	gxkstock.h	gxktexttools.h	gxklistwrapper.h \
 	gxktoolbar.h	gxkutils.h	gxkpolygon.h	gxkcellrendererpopup.h \
+	gxkgadget.h	\
 	gxk.h \
 )
 gxk_c_sources = $(strip \
 	gxkled.c	gxkcanvas.c	gxkdialog.c	gxkglobals.c	\
 	gxkstatusbar.c	gxkstock.c	gxktexttools.c	gxklistwrapper.c \
 	gxktoolbar.c	gxkutils.c	gxkpolygon.c	gxkcellrendererpopup.c \
+	gxkgadget.c	\
 )
 gxk_extra_sources = $(strip \
 	gxkmarshal.list \
