Added a missing file. Updated Swedish translation.
2003-11-02  Christian Rose  <menthos@menthos.com>

	* POTFILES.in: Added a missing file.
	* sv.po: Updated Swedish translation.

svn path=/trunk/; revision=1495

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -6,6 +6,7 @@ beast-gtk/bstcanvassource.c
 beast-gtk/bsteventrollctrl.c
 beast-gtk/bstfiledialog.c
 beast-gtk/bstinstrumentview.c
+beast-gtk/bstitemview.c
 beast-gtk/bstmain.c
 beast-gtk/bstmessages.c
 beast-gtk/bstparam-entry.c
