Updated Serbian translation.
2003-11-14  Danilo Å egan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

	* POTFILES.in: Added missing files.

svn path=/trunk/; revision=1510

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -29,5 +29,8 @@ beast-gtk/bsttrackview.c
 beast-gtk/bstusermessage.c
 beast-gtk/bstwaveeditor.c
 beast-gtk/bstwavereposhell.c
+beast-gtk/bstwaveview.c
+beast-gtk/dialogs/gadgets-beast.xml
+beast-gtk/dialogs/gadgets-standard.xml
 data/beast.desktop.in
 data/bse.keys.in
